images changed to thumbail on mobile and on other places, along with some css fixes

--- a/public/css/template3.css
+++ b/public/css/template3.css
@@ -2265,7 +2265,7 @@
 }
 .Template1 .ProductDetail {
   position: absolute;
-  top: 0px;
+  top: -2px;
   right: 0px;
   display: flex;
   width: fit-content;
