--- a/public/css/template3mobile.css
+++ b/public/css/template3mobile.css
@@ -855,7 +855,6 @@
   align-self: center;
   font-size: 20px;
   font-weight: 600;
-  margin-top: 1.6em;
 }
 .Template1 .Header .mainMenu--brandInfo .company--name {
   font-size: 87px;
@@ -3715,7 +3714,7 @@
   -webkit-appearance: none;
   position: absolute;
   top: -100px;
-  right: 88px;
+  right: 100px;
   width: 130px;
   height: 40px;
   cursor: pointer;
